force-app/main/default/objects/Contact/fields/Active_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunities__c</fullName>
    <label>Active Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity_Salesforce_Contact__c.Opportunity_Stage_Name__c</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Salesforce_Contact__c.Salesforce_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>