force-app/main/default/objects/Contact/fields/Cadence_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Meetings__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <label>Cadence Meetings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Priority to Setup</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>