force-app/main/default/objects/Contact/fields/Caelius_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Caelius_Alignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who at Caelius is aligned to this contact, or the primary holder of the relationship</inlineHelpText>
    <label>Caelius Alignment</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>