force-app/main/default/objects/Contact/fields/Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date__c</fullName>
    <label>Contact Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>