force-app/main/default/objects/Contact/fields/Contact_Domain__c.field-meta.xml
<CustomField>
    <fullName>Contact_Domain__c</fullName>
    <label>Contact Domain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Chartis</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>