force-app/main/default/objects/Contact/fields/Contact_role__c.field-meta.xml
<CustomField>
    <fullName>Contact_role__c</fullName>
    <label>Contact role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>RVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>