force-app/main/default/objects/Contact/fields/Current_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Current_Cadence__c</fullName>
    <label>Current Cadence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>