force-app/main/default/objects/Contact/fields/Current_Touch__c.field-meta.xml
<CustomField>
    <fullName>Current_Touch__c</fullName>
    <label>Current Touch #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>