force-app/main/default/objects/Contact/fields/Current_Touch_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Touch_Type__c</fullName>
    <label>Current Touch Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>