force-app/main/default/objects/Contact/fields/Default_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Rate__c</fullName>
    <label>Default Billing Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>