force-app/main/default/objects/Contact/fields/Definitive_Id_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Definitive_Id_from_Account__c</fullName>
    <description>Definitive Id from Account</description>
    <formula>Account.List_ID__c</formula>
    <inlineHelpText>Definitive Id from Account</inlineHelpText>
    <label>Definitive Id from Account</label>
    <type>Text</type>
</CustomField>