force-app/main/default/objects/Contact/fields/Email_Counter__c.field-meta.xml
<CustomField>
    <fullName>Email_Counter__c</fullName>
    <label>Email Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>