force-app/main/default/objects/Contact/fields/Email_Response_Score__c.field-meta.xml
<CustomField>
    <fullName>Email_Response_Score__c</fullName>
    <label>Email Response Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>