force-app/main/default/objects/Contact/fields/Employment_History__c.field-meta.xml
<CustomField>
    <fullName>Employment_History__c</fullName>
    <label>Employment History</label>
    <type>TextArea</type>
</CustomField>