force-app/main/default/objects/Contact/fields/Externalid__c.field-meta.xml
<CustomField>
    <fullName>Externalid__c</fullName>
    <externalId>true</externalId>
    <label>Externalid</label>
    <length>30</length>
    <type>Text</type>
</CustomField>