force-app/main/default/objects/Contact/fields/Firm_Type_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Firm_Type_from_Account__c</fullName>
    <description>Firm Type from Account</description>
    <formula>Account.Firm_Type__c</formula>
    <inlineHelpText>Firm Type from Account</inlineHelpText>
    <label>Firm Type from Account</label>
    <type>Text</type>
</CustomField>