force-app/main/default/objects/Contact/fields/First_Emailed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Emailed_Date__c</fullName>
    <label>First Emailed Date</label>
    <type>DateTime</type>
</CustomField>