force-app/main/default/objects/Contact/fields/FPSA_Contact_Score__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Contact_Score__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>Contact Score based on different activities</inlineHelpText>
    <label>Contact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>