force-app/main/default/objects/Contact/fields/FPSA_Website__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Website__c</fullName>
    <formula>Account.Website</formula>
    <label>Website</label>
    <type>Text</type>
</CustomField>