force-app/main/default/objects/Contact/fields/FPSA_Zoom_Contact_Accuracy_Score__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Zoom_Contact_Accuracy_Score__c</fullName>
    <inlineHelpText>Zoom Contact Accuracy Score</inlineHelpText>
    <label>Zoom Contact Accuracy Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>