force-app/main/default/objects/Contact/fields/Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group__c</fullName>
    <label>Functional Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>