force-app/main/default/objects/Contact/fields/Fusion_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Fusion_Primary_Phone__c</fullName>
    <formula>if(ISBLANK(Phone),  OtherPhone,Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fusion Primary Phone</label>
    <type>Text</type>
</CustomField>