force-app/main/default/objects/Contact/fields/HUbSpot_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>HUbSpot_Contact_ID__c</fullName>
    <label>HUbSpot Contact ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>