force-app/main/default/objects/Contact/fields/HubSpot_First__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_First__c</fullName>
    <label>First Attempt Connect and Sell</label>
    <type>Date</type>
</CustomField>