force-app/main/default/objects/Contact/fields/HubSpot_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Last_Attempt__c</fullName>
    <label>HubSpot Last Attempt</label>
    <type>Date</type>
</CustomField>