force-app/main/default/objects/Contact/fields/Hubspot_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Record_Id__c</fullName>
    <description>This field is the reference field for AccountId from Hubspot</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is the reference field for AccountId from Hubspot</inlineHelpText>
    <label>Hubspot Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>