force-app/main/default/objects/Contact/fields/K_Call_Counter__c.field-meta.xml
<CustomField>
    <fullName>K_Call_Counter__c</fullName>
    <label>K Call Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>