force-app/main/default/objects/Contact/fields/K_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>K_Contact_Notes__c</fullName>
    <label>K Contact Notes</label>
    <type>TextArea</type>
</CustomField>