force-app/main/default/objects/Contact/fields/K_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>K_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>K Do Not Call</label>
    <type>Checkbox</type>
</CustomField>