force-app/main/default/objects/Contact/fields/K_Do_Not_Call_Until__c.field-meta.xml
<CustomField>
    <fullName>K_Do_Not_Call_Until__c</fullName>
    <label>K Do Not Call Until</label>
    <type>Date</type>
</CustomField>