force-app/main/default/objects/Contact/fields/K_First_Dialed_Date__c.field-meta.xml
<CustomField>
    <fullName>K_First_Dialed_Date__c</fullName>
    <label>K First Dialed Date</label>
    <type>DateTime</type>
</CustomField>