force-app/main/default/objects/Contact/fields/K_Last_Dialed_Date__c.field-meta.xml
<CustomField>
    <fullName>K_Last_Dialed_Date__c</fullName>
    <label>K Last Dialed Date</label>
    <type>DateTime</type>
</CustomField>