force-app/main/default/objects/Contact/fields/KeyToDeDupe__c.field-meta.xml
<CustomField>
    <fullName>KeyToDeDupe__c</fullName>
    <formula>FirstName  &amp;  LastName  &amp;  Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KeyToDeDupe</label>
    <type>Text</type>
</CustomField>