force-app/main/default/objects/Contact/fields/Last_Email_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Outcome__c</fullName>
    <label>Last Email Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>