force-app/main/default/objects/Contact/fields/Last_Emailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Emailed_Date__c</fullName>
    <label>Last Emailed Date</label>
    <type>DateTime</type>
</CustomField>