force-app/main/default/objects/Contact/fields/Last_Touch_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Date_and_Time__c</fullName>
    <label>Last Touch Date and Time</label>
    <type>DateTime</type>
</CustomField>