force-app/main/default/objects/Contact/fields/Lead_Score_SAP_BOE_CFO__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_SAP_BOE_CFO__c</fullName>
    <label>Score - SAP BOE  CFO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>