force-app/main/default/objects/Contact/fields/Linked_In_profile__c.field-meta.xml
<CustomField>
    <fullName>Linked_In_profile__c</fullName>
    <label>Linked In profile</label>
    <type>Url</type>
</CustomField>