force-app/main/default/objects/Contact/fields/List_ID__c.field-meta.xml
<CustomField>
    <fullName>List_ID__c</fullName>
    <externalId>true</externalId>
    <label>Definitive executive ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>