force-app/main/default/objects/Contact/fields/Main_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Main_Speciality__c</fullName>
    <label>Main Speciality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>