force-app/main/default/objects/Contact/fields/Marketing_List__c.field-meta.xml
<CustomField>
    <fullName>Marketing_List__c</fullName>
    <label>Marketing List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambulatory Scheduling</fullName>
            </value>
            <value>
                <fullName>Congestive Heart Failure</fullName>
            </value>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>Emergency Dept</fullName>
            </value>
            <value>
                <fullName>ERAS</fullName>
            </value>
            <value>
                <fullName>Operating Room Efficiency</fullName>
            </value>
            <value>
                <fullName>Operational Excellence</fullName>
            </value>
            <value>
                <fullName>Pediatric Respiratory And Sepsis</fullName>
            </value>
            <value>
                <fullName>Physician Practice Management</fullName>
            </value>
            <value>
                <fullName>Quality and Safety</fullName>
            </value>
            <value>
                <fullName>Sickle Cell</fullName>
            </value>
            <value>
                <fullName>Talent Management</fullName>
            </value>
            <value>
                <fullName>Vancomycin</fullName>
            </value>
            <value>
                <fullName>CIO - HIMMS</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>COVID ED List</fullName>
            </value>
            <value>
                <fullName>COVID Re-Entry</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>SDR COVID Re-Entry Amb</fullName>
            </value>
            <value>
                <fullName>Call Campaign – Ambulatory</fullName>
            </value>
            <value>
                <fullName>Call Campaign Ambulatory</fullName>
            </value>
            <value>
                <fullName>Salesforce AE</fullName>
            </value>
            <value>
                <fullName>SDRAMBULATORY</fullName>
            </value>
            <value>
                <fullName>SDR SFDC Musto Amb</fullName>
            </value>
            <value>
                <fullName>St Luke Health System Executives</fullName>
            </value>
            <value>
                <fullName>PG Lead</fullName>
            </value>
            <value>
                <fullName>Practice Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>