force-app/main/default/objects/Contact/fields/MC_Click_Date__c.field-meta.xml
<CustomField>
    <fullName>MC_Click_Date__c</fullName>
    <label>MC Click Date</label>
    <type>Date</type>
</CustomField>