force-app/main/default/objects/Contact/fields/MC_Clicks__c.field-meta.xml
<CustomField>
    <fullName>MC_Clicks__c</fullName>
    <label>MC Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>