force-app/main/default/objects/Contact/fields/MC_List__c.field-meta.xml
<CustomField>
    <fullName>MC_List__c</fullName>
    <label>MC List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>