force-app/main/default/objects/Contact/fields/MC_Open__c.field-meta.xml
<CustomField>
    <fullName>MC_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mailchimp suggests that the contact opened the email</description>
    <label>MC Open</label>
    <type>Checkbox</type>
</CustomField>