force-app/main/default/objects/Contact/fields/Mulesoft_ACV_Total_Won__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_ACV_Total_Won__c</fullName>
    <label>Mulesoft ACV Total Won</label>
    <summarizedField>Opportunity_Salesforce_Contact__c.Mulesoft_ACV__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity_Salesforce_Contact__c.Opportunity_Stage_Name__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Salesforce_Contact__c.Salesforce_Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>