force-app/main/default/objects/Contact/fields/New_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Phone__c</fullName>
    <inlineHelpText>This Number was in Evan&apos;s SF Enterprise Rep List dated 03/05/2021</inlineHelpText>
    <label>New Phone</label>
    <type>Phone</type>
</CustomField>