force-app/main/default/objects/Contact/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <label>NPI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>