force-app/main/default/objects/Contact/fields/Opportunities_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Closed_Won__c</fullName>
    <label>Opportunities Closed Won</label>
    <summaryFilterItems>
        <field>Opportunity_Salesforce_Contact__c.Opportunity_Stage_Name__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Salesforce_Contact__c.Salesforce_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>