force-app/main/default/objects/Contact/fields/Opportunities_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Sourced__c</fullName>
    <label>Opportunities Sourced</label>
    <summaryFilterItems>
        <field>Opportunity_Salesforce_Contact__c.isLeadContact__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Salesforce_Contact__c.Salesforce_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>