force-app/main/default/objects/Contact/fields/Other_details__c.field-meta.xml
<CustomField>
    <fullName>Other_details__c</fullName>
    <description>so Admin can put extra field consolidated into this field while uploading Contacts from Data loader</description>
    <label>Other details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>