force-app/main/default/objects/Contact/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>A contact&apos;s persona</description>
    <inlineHelpText>A contact&apos;s persona</inlineHelpText>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMO</fullName>
                <label>CMO - Chief Medical Officer</label>
            </value>
            <value>
                <fullName>No Persona</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CTO</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>VP - Sales and Marketing</fullName>
            </value>
            <value>
                <fullName>Operation Sales</fullName>
            </value>
            <value>
                <fullName>Manager Sales and Marketing</fullName>
            </value>
            <value>
                <fullName>User Sales and Marketing</fullName>
            </value>
            <value>
                <fullName>Head of Sales and Marketing</fullName>
            </value>
            <value>
                <fullName>Human Resources Information Systems</fullName>
            </value>
            <value>
                <fullName>Salesforce Consulting Partner</fullName>
            </value>
            <value>
                <fullName>EPIC and IT Leader</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
            <value>
                <fullName>Business Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>