force-app/main/default/objects/Contact/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <inlineHelpText>This Number was in Evan&apos;s SF Enterprise Rep List dated 03/05/2021</inlineHelpText>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>