force-app/main/default/objects/Contact/fields/Position_Level__c.field-meta.xml
<CustomField>
    <fullName>Position_Level__c</fullName>
    <label>Position Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>