force-app/main/default/objects/Contact/fields/Primary_Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Marketing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate whether this is the primary contact for marketing to make unique account/contact</description>
    <label>Primary Marketing Contact</label>
    <type>Checkbox</type>
</CustomField>