force-app/main/default/objects/Contact/fields/Salesforce_Alliance_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Alliance_Engagement__c</fullName>
    <inlineHelpText>URL link to Quip for this RVP/team/AE</inlineHelpText>
    <label>Alliance Engagement</label>
    <type>Url</type>
</CustomField>