force-app/main/default/objects/Contact/fields/Salesforce_Industry__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Industry__c</fullName>
    <inlineHelpText>What industr</inlineHelpText>
    <label>Salesforce Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>RCG: Retail &amp; Consumer Goods</fullName>
            </value>
            <value>
                <fullName>HLS: Health, and Life Sciences</fullName>
            </value>
            <value>
                <fullName>CBS: Consumer &amp; Business Services</fullName>
            </value>
            <value>
                <fullName>CMT: Communications, Media, Technology</fullName>
            </value>
            <value>
                <fullName>TTH: Travel, Transportation, Hospitality</fullName>
            </value>
            <value>
                <fullName>FINS: Financial Services</fullName>
            </value>
            <value>
                <fullName>NPO: Non-Profit Org</fullName>
            </value>
            <value>
                <fullName>EDU: Education</fullName>
            </value>
            <value>
                <fullName>MAE: Manufacturing, Automotive, Energy</fullName>
            </value>
            <value>
                <fullName>GEOs: non-typical brands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>