force-app/main/default/objects/Contact/fields/Salesforce_Leads__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Leads</label>
    <type>Checkbox</type>
</CustomField>